# sqlite-mcp-server

./: .gitignore  =0.47.2  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATABASE_SETUP.md  Dockerfile  Dockerfile.alpine  Dockerfile.distroless  Dockerfile.secure  Dockerfile.smithery  Dockerfile.test  LICENSE  PKG-INFO  README-Docker.md  README.md  SECURITY.md  TESTING_CHECKLIST.md  TEST_RESULTS_2025-09-16.md  TRANSACTION_SAFETY.md  enable_transaction_safety.py  eslint.config.js  jsonb-utils.js  neverinfamous_sqlite-mcp-server_823bab.json  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  readme_sqlite_mcp_docker_repo.md  requirements-dev.txt  requirements.txt  server.py  server.py.bak  server.py.bk  smithery.yaml  start_mcp_sqlite.py  start_sqlite_mcp.py  start_sqlite_mcp_server.bat  test_admin_tools.db  test_foreign_keys.py  test_json_operations.py  (+6 more)
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  security-update.yml  smithery.yml
docs/: FULL-README.md  readme_sqlite_mcp_docker_repo.md
src/: server_http.py
src/mcp_server_sqlite/: __init__.py  db_integration.py  diagnostics.py  jsonb_utils.py  server.py  transaction_safety.py
tests/: README.md  __init__.py  test_basic.py  test_comprehensive.py  test_integration.py  test_json_operations.py  test_multi_database.py  test_parameter_binding.py  test_spatial_preprocessing.py  test_transaction_safety.py
utils/: safe-transactions.js
